feat: implement topic handler
